<resources>
    <string name="app_name">计算器</string>
    <string name="bt_1">1</string>
    <string name="bt_2">2</string>
    <string name="bt_3">3</string>
    <string name="bt_4">4</string>
    <string name="bt_5">5</string>
    <string name="bt_6">6</string>
    <string name="bt_7">7</string>
    <string name="bt_8">8</string>
    <string name="bt_9">9</string>
    <string name="bt_0">0</string>
    <string name="bt_point">.</string>
    <string name="bt_ce">CE</string>
    <string name="bt_plus">+</string>
    <string name="bt_minus">-</string>
    <string name="bt_multi">×</string>
    <string name="bt_div">÷</string>
    <string name="bt_result">=</string>
    <string name="bt_clear">C</string>
    <string name="del">←</string>

</resources>
