<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.home.c_menu.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">
        <TextView
            android:id="@+id/output_window"
            android:layout_width="fill_parent"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:textSize="25sp"
            android:gravity="right"
            android:textIsSelectable="true" />

        <EditText
            android:id="@+id/answer_window"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:textSize="30sp"
            android:gravity="right"
            android:textIsSelectable="true"/>
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1" >

        <TableRow android:layout_weight="0.2"
            android:layout_width="fill_parent" >

            <Button
                android:id="@+id/bt_del"
                android:layout_height="fill_parent"
                android:layout_weight="0.25"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:background="#333333"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:text="@string/del" />

            <Button
                android:id="@+id/bt_clear"
                android:layout_height="fill_parent"
                android:layout_weight="0.25"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:background="#333333"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:text="@string/bt_clear" />



            <Button
                android:id="@+id/bt_div"
                android:layout_height="fill_parent"
                android:layout_weight="0.25"
                android:background="#ffa500"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:textSize="25sp"
                android:text="@string/bt_div" />
        </TableRow>

        <TableRow android:layout_weight="0.2" >

            <Button
                android:id="@+id/bt_7"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.25"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:textSize="25sp"
                android:background="@android:color/darker_gray"
                android:text="@string/bt_7" />

            <Button
                android:id="@+id/bt_8"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.25"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:textSize="25sp"
                android:background="@android:color/darker_gray"
                android:text="@string/bt_8" />

            <Button
                android:id="@+id/bt_9"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.25"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:textSize="25sp"
                android:background="@android:color/darker_gray"
                android:text="@string/bt_9" />

            <Button
                android:id="@+id/bt_multi"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.25"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:background="#333333"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:text="@string/bt_multi" />
        </TableRow>

        <TableRow android:layout_weight="0.2" >

            <Button
                android:id="@+id/bt_4"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.25"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:textSize="25sp"
                android:background="@android:color/darker_gray"
                android:text="@string/bt_4" />

            <Button
                android:id="@+id/bt_5"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.25"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:textSize="25sp"
                android:background="@android:color/darker_gray"
                android:text="@string/bt_5" />

            <Button
                android:id="@+id/bt_6"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.25"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:textSize="25sp"
                android:background="@android:color/darker_gray"
                android:text="@string/bt_6" />

            <Button
                android:id="@+id/bt_minus"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.25"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:background="#333333"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:text="@string/bt_minus" />
        </TableRow>

        <TableRow android:layout_weight="0.2" >

            <Button
                android:id="@+id/bt_1"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.25"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:textSize="25sp"
                android:background="@android:color/darker_gray"
                android:text="@string/bt_1" />

            <Button
                android:id="@+id/bt_2"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.25"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:textSize="25sp"
                android:background="@android:color/darker_gray"
                android:text="@string/bt_2" />

            <Button
                android:id="@+id/bt_3"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.25"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:textSize="25sp"
                android:background="@android:color/darker_gray"
                android:text="@string/bt_3" />

            <Button
                android:id="@+id/bt_plus"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.25"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:background="#333333"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:text="@string/bt_plus" />
        </TableRow>

        <TableRow android:layout_weight="0.2" >

            <Button
                android:id="@+id/bt_point"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.25"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:textSize="25sp"
                android:background="@android:color/darker_gray"
                android:text="@string/bt_point" />

            <Button
                android:id="@+id/bt_0"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.25"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:textSize="25sp"
                android:background="@android:color/darker_gray"
                android:text="@string/bt_0" />

            <Button
                android:id="@+id/bt_result"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:layout_weight="0.5"
                android:layout_marginLeft="1dp"
                android:layout_marginBottom="1dp"
                android:textSize="25sp"
                android:background="#00CC00"
                android:text="@string/bt_result" />
        </TableRow>
    </TableLayout>

</LinearLayout>